.provarCaches/00D6C0000000xA6UAI/objects/sked__Shift_Tag__c.object
<CustomObject>
    <fields>
        <fullName>sked__Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Shift__c</fullName>
        <label>Shift</label>
        <referenceTo>sked__Shift__c</referenceTo>
        <relationshipLabel>Shift Tags</relationshipLabel>
        <relationshipName>Shift_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>sked__Tag__c</referenceTo>
        <relationshipLabel>Shift Tags</relationshipLabel>
        <relationshipName>Shift_Tags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Weighting__c</fullName>
        <label>Weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shift Tag</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Shift Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__RequiredOrWeighting</fullName>
        <active>true</active>
        <errorConditionFormula>OR( AND( sked__Required__c  = true, NOT( ISNULL( sked__Weighting__c ) ) ) , AND( sked__Required__c  = false, ISNULL( sked__Weighting__c ) ) )</errorConditionFormula>
        <errorMessage>Either Required or Weighting attributes must be present, but not both of them.</errorMessage>
    </validationRules>
</CustomObject>